--- a/resources/css/opencompany.css
+++ b/resources/css/opencompany.css
@@ -56,7 +56,7 @@ a.topic-read-more {
   text-decoration: underline !important;
 }
 
-.content {
+th.topic p, .content {
   font-size: 12px;
   color: #4e5a6b;
   font-family: Domine-Regular !important;
