--- a/resources/css/opencompany.css
+++ b/resources/css/opencompany.css
@@ -56,9 +56,33 @@ a.topic-read-more {
   text-decoration: underline !important;
 }
 
-th.topic p, .content {
+th.topic, th.topic p, th.topic ul, .content {
   font-size: 12px;
   color: #4e5a6b;
   font-family: Domine-Regular !important;
   line-height: 1.3;
+}
+
+th.topic h3 {
+  font-family: Domine-Regular, Georgia, serif !important;
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 1.8;
+  color: #4e5a6b;
+
+}
+
+a {
+  color: #4e5a6b;
+  font-family: Domine-Regular, Georgia, serif !important;
+  text-decoration: underline;
+  text-decoration-color: #f9d748; /* OC yellow, new CSS3, won't work most places */
+}
+
+a:visited {
+  color: #4e5a6b;
+}
+
+a:hover {
+  color: #4e5a6b;
 }
