Update email style to put note alone at top in left justified white. Remove date from attribution.

--- a/resources/css/opencompany.css
+++ b/resources/css/opencompany.css
@@ -5,6 +5,10 @@ html,
   font-family: Domine-Regular, Georgia, serif !important;
 }
 
+.note {
+  background: #fff;
+}
+
 .header {
   background: #f9f9f9;
 }
