--- a/resources/css/opencompany.css
+++ b/resources/css/opencompany.css
@@ -49,11 +49,32 @@ p.topic-title, a.topic-read-more {
   font-family: OpenSans, Arial, sans-serif !important;
   font-weight: bold;
   font-size: 12px;
-  line-height: 1.5;
+  line-height: 1.5 !important;
   letter-spacing: 1px;
   color: #4e5a6b;
   opacity: 0.5;
   margin-bottom: 10px;
+}
+
+p.metric {
+  font-family: OpenSans, Arial, sans-serif !important;
+  font-weight: bold;
+  font-size: 24px !important;
+  line-height: 1.5 !important;
+  color: #4e5a6b;
+  opacity: 0.75;
+  margin-bottom: 0 !important;
+}
+
+p.label {
+  font-family: OpenSans, Arial, sans-serif !important;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 1px;
+  color: #4e5a6b;
+  opacity: 0.75;
+  margin-bottom: 20px;
 }
 
 a.topic-read-more {
