--- a/resources/css/opencompany.css
+++ b/resources/css/opencompany.css
@@ -5,8 +5,10 @@ html,
   font-family: Domine-Regular, Georgia, serif !important;
 }
 
-.note {
+.note, p.note {
   background: #fff;
+  font-family: Arial, sans-serif !important;
+  font-size: 13px !important;
 }
 
 .header {
