--- a/resources/css/opencompany.css
+++ b/resources/css/opencompany.css
@@ -58,6 +58,9 @@ table.header p.company-name {
   margin-bottom: 0px !important;
   font-weight: bold;
   line-height: 1.5;
+  -webkit-hyphens: none;
+  -moz-hyphens: none;
+  hypens: none;
 }
 
 table.header p.title {
@@ -154,6 +157,9 @@ table.footer p {
   line-height: 1.3;
   font-family: Domine-Regular, Georgia, serif !important;
   color: #4e5a6b;
+  -webkit-hyphens: none;
+  -moz-hyphens: none;
+  hypens: none;
 }
 
 table.footer p a {
@@ -168,6 +174,9 @@ table.footer table.button a {
   color: #4e5a6b;
   opacity: 0.5;
   text-decoration: none !important;
+  -webkit-hyphens: none;
+  -moz-hyphens: none;
+  hypens: none;
 }
 
 table.button.learn table a {
