Tighten up email whitespace.

--- a/resources/css/opencompany.css
+++ b/resources/css/opencompany.css
@@ -147,7 +147,7 @@ table.topic p.label {
 /* === Footer === */
 
 table.footer {
-  background: #fff;
+  background: #f9f9f9;
   display: table;
   width: 100%;
 }
