--- a/resources/css/opencompany.css
+++ b/resources/css/opencompany.css
@@ -2,22 +2,16 @@ body,
 html,
 .body {
   background: #f9f9f9 !important;
-  font-family: Domine-Regular, Georgia, serif !important;
+  font-family: Domine-Regular, Georgia, serif;
 }
 
-a {
-  color: #4e5a6b !important;
-  font-family: Domine-Regular, Georgia, serif !important;
-  text-decoration: underline !important;
-  text-decoration-color: #f9d748 !important; /* OC yellow, new CSS3, won't work most places */
-}
-
+a,
+a:hover,
+a:active,
 a:visited {
-  color: #4e5a6b !important;
-}
-
-a:hover {
-  color: #4e5a6b !important;
+  color: #4e5a6c;
+  font-family: Domine-Regular, Georgia, serif;
+  text-decoration: underline;
 }
 
 /* === Sender message === */
@@ -86,14 +80,17 @@ table.topic p.topic-headline {
 }
 
 table.topic p.topic-title,
-table.topic a.topic-read-more {
+table.topic a.topic-read-more,
+table.topic a.topic-read-more:hover,
+table.topic a.topic-read-more:visited,
+table.topic a.topic-read-more:active {
   font-family: OpenSans, Arial, sans-serif !important;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.5 !important;
   letter-spacing: 1px;
-  color: #4e5a6b;
-  opacity: 0.5;
+  /* color: #4e5a6b; opacity: 0.5; is the same as: */
+  color: #A6ACB4 !important;
   margin-bottom: 10px;
 }
 
@@ -123,24 +120,22 @@ table.topic h4 {
 
 /* Data Topic */
 
-table.topic p.metric {
+table.topic p.metric, table.topic p.label {
   font-family: OpenSans, Arial, sans-serif !important;
   font-weight: bold;
-  font-size: 32px !important;
   line-height: 1.5 !important;
-  color: #4e5a6b;
-  opacity: 0.75;
+  /* color: #4e5a6b; opacity: 0.75; is the same as: */
+  color: #7A838F !important;
+}
+
+table.topic p.metric {
+  font-size: 32px !important;
   margin-bottom: 0 !important;
 }
 
 table.topic p.label {
-  font-family: OpenSans, Arial, sans-serif !important;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 1.5;
+  font-size: 16px !important;
   letter-spacing: 1px;
-  color: #4e5a6b;
-  opacity: 0.75;
   margin-bottom: 20px;
 }
 
@@ -162,36 +157,9 @@ table.footer p {
   hypens: none;
 }
 
-table.footer p a {
+table.footer p a,
+table.footer p a:hover,
+table.footer p a:active,
+table.footer p a:visited {
   font-weight: bold;
-}
-
-table.footer table.button a {
-  font-size: 18px;
-  line-height: 1.5;
-  font-family: OpenSans, Arial, sans-serif !important;
-  font-weight: bold;
-  color: #4e5a6b;
-  opacity: 0.5;
-  text-decoration: none !important;
-  -webkit-hyphens: none;
-  -moz-hyphens: none;
-  hypens: none;
-}
-
-table.button.learn table a {
-  border: 0px solid white; 
-}
-
-table.button.learn table td {
-  background: white;
-  border: solid 3px rgba(78, 90, 107, 0.5);
-}
-
-table.button.learn:hover table td {
-  background: #FCFCFC; 
-}
-
-table.button.learn:hover table a {
-  border: 0px solid rgba(78, 90, 107, 0.5);
 }
