--- a/resources/css/oc-snapshot.css
+++ b/resources/css/oc-snapshot.css
@@ -1,7 +1,7 @@
 body,
 html,
 .body {
-  background: #f9f9f9 !important;
+  background: #fff !important;
   font-family: Domine-Regular, Georgia, serif;
 }
 
@@ -12,6 +12,10 @@ a:visited {
   color: #0A0A0A;
   font-family: Domine-Regular, Georgia, serif;
   text-decoration: underline;
+}
+
+table.container {
+  width: 450px;
 }
 
 /* === Sender message === */
@@ -25,7 +29,7 @@ table.note {
 table.note th,
 table.note th p {
   font-family: Arial, sans-serif;
-  font-size: 16px;
+  font-size: 15px;
 }
 
 /* === Company Update === */
@@ -34,61 +38,37 @@ th.columns {
   padding-bottom: 0px !important;
 }
 
-table.header {
-  background: #f9f9f9;
-}
-
-/* Header */
-
-table.header p.company-name {
-  font-family: Domine-Regular, Georgia, serif !important;
-  font-size: 26px;
-  color: #0A0A0A;
-  margin-bottom: 0px !important;
-  font-weight: bold;
-  line-height: 1.5;
-  -webkit-hyphens: none;
-  -moz-hyphens: none;
-  hypens: none;
-}
-
-table.header p.title {
-  font-size: 18px;
-  font-weight: bold;
-  color: #0A0A0A;
-  font-family: Domine-Regular, Georgia, serif !important;
-  line-height: 1.5;
-  letter-spacing: normal;
-}
-
 /* Topic */
 
 table.topic {
-  border-radius: 2px;
-  box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.2), inset 0 1px 3px 0 #ffffff;
-  margin-bottom: 5px;
+  border-bottom: 1px solid #EDEDED;
+}
+
+table.topic.last {
+  border-bottom: 0;
+}
+
+table.topic th.large-10 th.small-10 {
+  padding-left: 0;
+  padding-right: 0;  
 }
 
 table.topic p.topic-headline {
-  font-size: 24px;
+  font-size: 18px;
   color: #0A0A0A;
   font-family: Domine-Regular, Georgia, serif !important;
   line-height: 1.5;
+  margin-bottom: 0px;
 }
 
-table.topic p.topic-title,
-table.topic a.topic-read-more,
-table.topic a.topic-read-more:hover,
-table.topic a.topic-read-more:visited,
-table.topic a.topic-read-more:active {
+table.topic p.topic-title {
   font-family: OpenSans, Arial, sans-serif !important;
-  font-weight: bold;
-  font-size: 16px;
+  font-size: 15px;
   line-height: 1.5 !important;
   letter-spacing: 1px;
   /* color: #4e5a6b; opacity: 0.5; is the same as: */
   color: #A6ACB4 !important;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 table.topic a.topic-read-more {
@@ -98,7 +78,7 @@ table.topic a.topic-read-more {
 table.topic,
 table.topic p,
 table.topic ul {
-  font-size: 16px;
+  font-size: 15px;
   color: #0A0A0A;
   font-family: Domine-Regular;
   line-height: 1.5;
@@ -130,7 +110,7 @@ table.topic span.metric-diff {
 
 
 table.topic span.metric {
-  font-size: 16px !important;
+  font-size: 15px !important;
   margin-bottom: 20px;
   color: #0A0A0A;
 }
@@ -163,8 +143,9 @@ table.footer {
   width: 100%;
 }
 
-table.footer p {
-  font-size: 18px;
+table.footer p,
+table.footer a {
+  font-size: 15px;
   line-height: 1.3;
   font-family: Domine-Regular, Georgia, serif !important;
   color: #4e5a6b;
