--- a/resources/css/oc-snapshot.css
+++ b/resources/css/oc-snapshot.css
@@ -46,6 +46,7 @@ table.topic {
 
 table.topic.last {
   border-bottom: 0;
+  margin-bottom: 30px;
 }
 
 table.topic th.large-10 th.small-10 {
@@ -125,7 +126,7 @@ table.topic span.metric.neg {
 
 table.topic span.label {
   padding-left: 7px;
-  font-size: 16px !important;
+  font-size: 15px !important;
   letter-spacing: 1px;
   margin-bottom: 20px;
 }
@@ -152,11 +153,4 @@ table.footer a {
   -webkit-hyphens: none;
   -moz-hyphens: none;
   hypens: none;
-}
-
-table.footer p a,
-table.footer p a:hover,
-table.footer p a:active,
-table.footer p a:visited {
-  font-weight: bold;
 }
