--- a/resources/css/oc-snapshot.css
+++ b/resources/css/oc-snapshot.css
@@ -143,7 +143,7 @@ img.sparkline, img.sparkbar {
 /* === Footer === */
 
 table.footer {
-  background: #f9f9f9;
+  background: transparent;
   display: table;
   width: 100%;
 }
