--- a/resources/css/oc-transactional.css
+++ b/resources/css/oc-transactional.css
@@ -15,8 +15,8 @@ p {
 }
 
 table.button.oc table td {
-  background: #f9d748;
-  border: 1px solid #f9d748; }
+  background: #7597FC;
+}
 
 table.button.oc table a {
   font-family: OpenSans, Arial, sans-serif !important;
@@ -24,13 +24,9 @@ table.button.oc table a {
   font-weight: bold;
   line-height: 1.5;
   letter-spacing: 1px;
-  color: #4e5a6b;
+  color: #FFF;
 }
 
 table.button.oc:hover table td {
-  border: 1px solid #d8b935;
-}
-
-table.button.oc:hover table a {
-  color: #4e5a6b !important;
+  background: #4C67FC;
 }
