--- a/resources/css/oc-digest.css
+++ b/resources/css/oc-digest.css
@@ -1,8 +1,8 @@
 body,
 html,
 .body {
-  background: #FFF !important;
-  font-family: Arial, sans-serif !important;
+  background: #FBFAF7 !important;
+  font-family: Helvetica, sans-serif !important;
 }
 
 @media only screen and (max-device-width: 564px) {
@@ -11,7 +11,15 @@ html,
 
 table.container { max-width: 564px; }
 
+h1 {
+  color: #34414F !important;
+  text-align: center !important;
+  font-size: 32px !important;
+  font-weight: bold !important;
+}
+
 h2 {
+  color: #34414F !important;
   font-size: 16px !important;
   font-weight: bold !important;
 }
@@ -20,25 +28,31 @@ table th {
   padding: 0px !important;
 }
 
+table.header, table.footer {
+  background: #FBFAF7;
+}
+
+a {
+  color: #3FBD7C;
+}
+
+a:hover {
+  color: #64cb96;
+}
+
 a.post-link {
-  color: #4C67FC;
   font-size: 20px;
   text-decoration: underline;
 }
 
 p.attribution {
-  color: #A0A2A7;
+  color: #898D93;
   font-size: 14px;
 }
 
 table.footer p {
-  color: #898D93;
+  color: #C4C6C9;
   font-size: 14px;
-}
-
-table.footer p a {
-  color: #898D93;
-  text-decoration: underline;
 }
 
 table.board {
