WIP: transactional emails

--- a/resources/css/foundation.css
+++ b/resources/css/foundation.css
@@ -90,7 +90,7 @@ table.body {
 
 table.container {
   background: #fefefe;
-  /*width: 580px;*/
+  width: 580px;
   margin: 0 auto;
   Margin: 0 auto;
   text-align: inherit; }
