--- a/resources/css/oc-transactional.css
+++ b/resources/css/oc-transactional.css
@@ -43,6 +43,7 @@ h1 {
   font-size: 28px;
   font-weight: bold;  
   color: #34414F;
+  margin: 0px;
 }
 
 h2 {
@@ -50,6 +51,7 @@ h2 {
   font-size: 22px;
   font-weight: bold;  
   color: #34414F;
+  margin: 0px;
 }
 
 p {
@@ -57,6 +59,12 @@ p {
   font-size: 17px;
   color: #34414F;
   line-height: 1.5;
+  margin: 0px;
+}
+
+p.attribution {
+  font-size: 14px;
+  color: #898D93;
 }
 
 table.cta-button {
