--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -19,7 +19,29 @@ table.body-block.top {
 }
 
 table.body-block.bottom {
-  border-bottom: 1px solid #F2F1ED;
+  border-bottom: 1px solid rgba(228, 227, 222, 0.7);
+  border-left: 1px solid rgba(228, 227, 222, 0.7);
+  border-right: 1px solid rgba(228, 227, 222, 0.7);
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+
+table.note-block {
+  background: white !important;
+  border-left: 1px solid rgba(228, 227, 222, 0.7);
+  border-right: 1px solid rgba(228, 227, 222, 0.7);
+}
+
+table.note-block.top {
+  border-top: 1px solid rgba(228, 227, 222, 0.7);
+  border-left: 1px solid rgba(228, 227, 222, 0.7);
+  border-right: 1px solid rgba(228, 227, 222, 0.7);
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+
+table.note-block.bottom {
+  border-bottom: 1px solid rgba(228, 227, 222, 0.7);
 }
 
 table th, 
