--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -1,11 +1,12 @@
 body,
 html,
 .body {
-  background: #FBFAF7;
+  background-color: white;
+  color: #34414F;
 }
 
 table {
-  background: #FBFAF7 !important;
+  background-color: white !important;
 }
 
 table.white-block {
@@ -13,7 +14,7 @@ table.white-block {
 }
 
 table.body-block {
-  background: white !important;    
+  background-color: white !important;    
   border-left: 1px solid #F2F1ED;
   border-right: 1px solid #F2F1ED;
 }
@@ -63,7 +64,7 @@ table.body .column {
 }
 
 table th.body-spacer {
-  background: white !important;
+  background-color: white !important;
 }
 
 img.logo {
@@ -104,7 +105,8 @@ p.attribution {
 table.cta-button {
   height: 40px;
   border-radius: 40px;
-  background: #3FBD7C !important;
+  background-color: #3FBD7C !important;
+  width: auto !important;
 }
 
 table.post-button {
@@ -112,7 +114,7 @@ table.post-button {
   height: 40px;
   border-radius: 40px;
   border: 1px solid #D4F6E4;
-  background: white !important;
+  background-color: white !important;
 }
 
 span.note-author {
@@ -136,6 +138,19 @@ span.button-text {
   padding-top: 13px;
 }
 
+span.cta-text {
+  float: left;
+  font-family: Helvetica, Arial, sans-serif !important;
+  font-size: 14px;
+  font-weight: bold;
+  height: 16px;
+  display: block;
+  padding: 12px 20px;
+  border-radius: 40px;
+  background-color: #3FBD7C;
+  color: white;
+}
+
 table.cta-button span.button-text {
   color: white;
 }
@@ -152,4 +167,62 @@ table.footer p {
 table.footer a {
   font-weight: bold;
   color: #3FBD7C;
+}
+
+/* New template specific css */
+.footer-table {
+  background-color: #F2F1ED !important;
+}
+
+p.header-paragraph {
+  text-align: right;
+  font-size: 14px;
+  color: #898D93;
+}
+
+p.header-paragraph a {
+  color: lightgreen;
+  font-size: 14px;
+  color: #3FBD7C;
+  text-decoration: underline;
+}
+
+table.header-bottom {
+  border-bottom: 1px solid #F0F0F1;
+}
+
+p.footer-paragraph {
+  color: #898D93;
+  font-size: 14px;
+}
+
+p.footer-paragraph.bottom-footer {
+  opacity: 0.5;
+}
+
+p.footer-paragraph a {
+  color: #898D93;
+  text-decoration: underline;
+}
+
+table.footer-table a.footer-link {
+  float: right;
+  margin-left: 16px;
+  text-decoration: underline;
+}
+
+.note-author-avatar {
+  float: left;
+}
+
+span.note-author-name {
+  float: left;
+  padding-top: 10px;
+  margin-left: 8px;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+table.horizontal-line {
+  border-top: 1px solid #F0F0F1;
 }
