Set minimum width for the carrot logo.

--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -202,6 +202,10 @@ p.digest-help a{
   text-decoration: underline;
 }
 
+th.header-icon {
+  min-width: 74px;;
+}
+
 th.footer-icon img {
   float: right;
 }
