Darker color for the digest footer.

--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -248,7 +248,7 @@ p.digest-bottom-footer-paragraph {
 }
 
 p.digest-footer-paragraph, p.digest-footer-paragraph a {
-  color: #C4C6C7;
+  color: #99A0A7;
   font-size: 14px;
   font-weight: 400;
 }
